add AdminAPI and Admindto; refactor package structure and clean up unused code